# skills-cli

./: .gitignore  Cargo.toml  README.md
.gemini/skills/bl1nk-bridge/: SKILL.md
docs/: ARCHITECTURE.md  NEXT_STEP.md  PHASE_3_PLAN.md  SPEC.md
registry/: Cargo.toml
registry/src/: main.rs  mcp.rs  types.rs
registry/src/api/: mod.rs
skills/creat-plan/: SKILL.md
skills/creat-plan/scripts/: validate-all-plan.sh
src/: error.rs  lib.rs  main.rs
src/config/: manager.rs
src/converter/: c2g.rs  g2c.rs
src/core/: acp.rs  notify.rs  server.rs
src/providers/: base.rs
templates/: onboarding-template.md
tests/: cli.rs  installer.rs
