[package]
name = "bl1nk-cli"
version = "0.1.0"
edition = "2021"
description = "Bl1nk CLI - Project initialization and universal agent skill installer"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
zip = "0.6"
which = "6.0"
walkdir = "2"
chrono = "0.4"
lazy_static = "1.4"